--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,6 @@
     "require": {
         "silex/silex": "dev-master",
         "twig/twig": ">=1.8,<2.0-dev",
-        "symfony/twig-bridge": "2.1.*",
-        "symfony/browser-kit": "dev-master",
-        "symfony/class-loader": "dev-master",
-        "symfony/config": "dev-master",
-        "symfony/console": "dev-master",
-        "symfony/dependency-injection": "dev-master",
-        "symfony/finder": "dev-master",
-        "symfony/config": "dev-master",
-        "symfony/yaml": "dev-master",
-        "symfony/form": "dev-master",
-        "symfony/templating": "dev-master",
-        "symfony/translation": "dev-master",
-        "symfony/validator": "dev-master",
-        "symfony/css-selector": "dev-master",
-        "symfony/process": "dev-master"
+        "symfony/twig-bridge": "2.1.*"
     }
 }
