--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "silex/silex": "dev-master",
         "twig/twig": ">=1.8,<2.0-dev",
-        "symfony/twig-bridge": "2.1.*"
+        "symfony/twig-bridge": "2.1.*",
+        "symfony/browser-kit": "2.1.*"
     }
 }
